<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for exam</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_tracker</exec_depend>
  <exec_depend>robot_solver</exec_depend>
  <exec_depend>robot_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
